# funnelbarn

./: .env.example  .gitignore  .golangci.yml  .sops.yaml  CLAUDE.md  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  go.mod  go.sum  llms.txt  nfpm-funnelbarn.yaml  nfpm-trailpost.yaml  package-lock.json  package.json  playwright.config.ts  svc-coverage.out
.github/workflows/: binary-release.yml  build-and-test.yml  ci.yml  deploy-production.yml  deploy-site.yml  sync-iambarn-oidc.yml  tag-check.yml
cmd/funnelbarn/: cli.go  main.go  main_test.go
cmd/trailpost/: main.go
deploy/: RUNBOOK.md  SECRETS.md
deploy/deb/: postinstall.sh  preremove.sh
deploy/docker/: entrypoint.sh  litestream.yml  nginx.conf  service.Dockerfile  web.Dockerfile
deploy/etc/: funnelbarn.conf.example  trailpost.conf.example
deploy/systemd/: funnelbarn.service  trailpost.service
e2e/: api.spec.ts  auth.spec.ts  dashboard.spec.ts  funnels.spec.ts  global-setup.ts  iambarn.spec.ts  recording-verify.spec.ts
examples/basic-website/: README.md
internal/api/: abtests.go  anonymize.go  anonymize_test.go  (+54 more)
loadtest/: README.md  config.js  results-ingest.json
scripts/: coverage-baseline.txt  coverage-gate.py  go-quality-gates.sh
sdks/python/: README.md  pyproject.toml
sdks/python/funnelbarn/: __init__.py
sdks/python/trailpost/: __init__.py
site/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
web/: .eslintrc.json  .jscpd.json  coverage-uncovered-baseline.txt  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
(+401 files in other folders)
